[1.3.X] Fixed a small admin CSS issue where the "Save and continue editing" and "Save and add another" buttons were wrongly aligned with left-to-right languages in IE7.
Backport of r16683 from trunk.

git-svn-id: http://code.djangoproject.com/svn/django/branches/releases/1.3.X@16684 bcc190cf-cafb-0310-a4f2-bffc1f526a37

--- a/django/contrib/admin/media/css/forms.css
+++ b/django/contrib/admin/media/css/forms.css
@@ -352,3 +352,9 @@ fieldset.monospace textarea {
 .empty-form {
     display: none;
 }
+
+/* IE7 specific bug fixes */
+
+.submit-row input {
+    float: right;
+}
